--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "formik": "^2.2.6",
     "node-sass": "^4.14.1",
     "numeral": "^2.0.6",
+    "rc-pagination": "^3.1.3",
     "react": "^17.0.1",
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-modal": "^3.12.1",
+    "react-paginate": "^7.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
