--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hasan42.github.io/owners-app/",
+  "homepage": "http://hasan42.github.io/owners-app",
   "name": "owners-app",
   "version": "0.1.0",
   "private": true,
